--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,6 @@
   <body>
     <div id="main">
     </div>
-    <script src="./bundle.js"></script>
+    <script type="module" src="./bundle.js"></script>
   </body>
 </html>
